[gd_scene format=3 uid="uid://cy5kumexxfyyb"]

[ext_resource type="Script" uid="uid://c7ciamuapwubd" path="res://Entities/Player/Model/PlayerModel.gd" id="1_660r0"]
[ext_resource type="Script" uid="uid://bjw3tygpodtev" path="res://Entities/Player/Model/PlayerResources.gd" id="2_rvbmx"]
[ext_resource type="Script" uid="uid://620any2k6qha" path="res://Entities/Player/Model/PlayerCombatManager.gd" id="3_m20wt"]
[ext_resource type="Script" uid="uid://nvdk7gl3vqfs" path="res://Entities/Player/Model/PlayerActionData.gd" id="4_dvg17"]
[ext_resource type="Script" uid="uid://dgmxstlenay7b" path="res://Entities/Player/Actions/PlayerActionManager.gd" id="5_f2y5u"]
[ext_resource type="Script" uid="uid://du8txlrr2po7v" path="res://Entities/Player/Actions/Run.gd" id="6_kb0qu"]
[ext_resource type="Script" uid="uid://ca6i0s8oneqjc" path="res://Entities/Player/Actions/Walk.gd" id="7_n82hr"]
[ext_resource type="Script" uid="uid://p1qurm2f1bvl" path="res://Entities/Player/Actions/Idle.gd" id="8_j3w6i"]

[sub_resource type="Curve" id="Curve_prnb2"]
_limits = [0.0, 7.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.114286, 1), 0.0, 0.0, 0, 0, Vector2(0.2, 2), 0.0, 0.0, 0, 0, Vector2(0.3, 3), 0.0, 0.0, 0, 0, Vector2(0.414286, 4), 0.0, 0.0, 0, 0, Vector2(0.485714, 5), 0.0, 0.0, 0, 0, Vector2(0.6, 6.1), 0.0, 0.0, 0, 0, Vector2(1, 7), 0.0, 0.0, 0, 0]
point_count = 8
metadata/_snap_count = 70
metadata/_snap_enabled = true

[sub_resource type="Animation" id="Animation_prnb2"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionData:transitionable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionData:interruptable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ActionData:vulnerable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActionData:acceptsQueue")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ActionData:comboPause")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionData:tracksDirection")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kbfrm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionData:interruptable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionData:vulnerable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ActionData:acceptsQueue")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActionData:comboPause")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ActionData:tracksDirection")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionData:transitionable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s785v"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionData:transitionable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionData:interruptable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ActionData:vulnerable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActionData:acceptsQueue")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ActionData:comboPause")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionData:tracksDirection")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7bkbp"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionData:transitionable")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionData:interruptable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ActionData:vulnerable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActionData:acceptsQueue")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ActionData:comboPause")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ActionData:tracksDirection")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_prnb2"]
_data = {
&"Idle": SubResource("Animation_prnb2"),
&"RESET": SubResource("Animation_kbfrm"),
&"Run": SubResource("Animation_s785v"),
&"Walk": SubResource("Animation_7bkbp")
}

[node name="PlayerModel" type="Node3D" unique_id=21598571]
script = ExtResource("1_660r0")

[node name="Resources" type="Node" parent="." unique_id=2081649325]
script = ExtResource("2_rvbmx")
FLOW_CURVE = SubResource("Curve_prnb2")
metadata/_custom_type_script = "uid://bjw3tygpodtev"

[node name="CombatManager" type="Node" parent="." unique_id=2042843911 node_paths=PackedStringArray("resources")]
script = ExtResource("3_m20wt")
resources = NodePath("../Resources")
metadata/_custom_type_script = "uid://620any2k6qha"

[node name="ActionData" type="AnimationPlayer" parent="." unique_id=1137306923]
libraries/ = SubResource("AnimationLibrary_prnb2")
script = ExtResource("4_dvg17")
metadata/_custom_type_script = "uid://nvdk7gl3vqfs"

[node name="ActionManager" type="Node" parent="." unique_id=499464480]
script = ExtResource("5_f2y5u")

[node name="Run" type="Node" parent="ActionManager" unique_id=1599470530]
script = ExtResource("6_kb0qu")
RUN_SPEED = 500.0
TYPE = 15
PRIORITY = 1
DEFAULT_ANIMATION = "Run"
metadata/_custom_type_script = "uid://jc1g0sv32qq1"

[node name="Walk" type="Node" parent="ActionManager" unique_id=1427857652]
script = ExtResource("7_n82hr")
WALK_SPEED = 300.0
TYPE = 16
PRIORITY = 1
DEFAULT_ANIMATION = "Walk"
metadata/_custom_type_script = "uid://jc1g0sv32qq1"

[node name="Idle" type="Node" parent="ActionManager" unique_id=1155024913]
script = ExtResource("8_j3w6i")
TYPE = 20
DEFAULT_ANIMATION = "Idle"
metadata/_custom_type_script = "uid://jc1g0sv32qq1"
